# cloud-hypervisor-sdk

./: .cloud-hypervisor-version  .gitignore  .openapi-generator-ignore  CLAUDE.md  Cargo.toml  Makefile  QUICKSTART.md  README.md  regenerate.sh
.github/workflows/: ci.yml  release.yml  sync.yml
.openapi-generator/: FILES
docs/: BalloonConfig.md  ConsoleConfig.md  CpuAffinity.md  CpuFeatures.md  CpuTopology.md  CpusConfig.md  DebugConsoleConfig.md  DefaultApi.md  DeviceConfig.md  DeviceNode.md  DiskConfig.md  FsConfig.md  LandlockConfig.md  MemoryConfig.md  MemoryZoneConfig.md  NetConfig.md  NumaConfig.md  NumaDistance.md  PayloadConfig.md  PciDeviceInfo.md  PciSegmentConfig.md  PlatformConfig.md  PmemConfig.md  RateLimitGroupConfig.md  RateLimiterConfig.md  ReceiveMigrationData.md  RestoreConfig.md  RngConfig.md  SendMigrationData.md  SgxEpcConfig.md  TokenBucket.md  TpmConfig.md  VdpaConfig.md  VirtQueueAffinity.md  VmAddUserDevice.md  VmConfig.md  VmCoredumpData.md  VmInfo.md  VmRemoveDevice.md  VmResize.md  (+5 more)
examples/: README.md  connect.rs  fetch_test_images.sh  shutdown_vm.rs  simple_vm.rs  simple_vm_alpine.rs  simple_vm_cirros.rs  vm_console.sh
src/: client.rs  error.rs  lib.rs  machine.rs  main.rs
src/apis/: configuration.rs  default_api.rs  mod.rs
src/models/: balloon_config.rs  console_config.rs  cpu_affinity.rs  cpu_features.rs  cpu_topology.rs  cpus_config.rs  debug_console_config.rs  device_config.rs  device_node.rs  disk_config.rs  disk_image_type.rs  fs_config.rs  landlock_config.rs  memory_config.rs  memory_zone_config.rs  mod.rs  net_config.rs  (+29 more)
