[package]
name = "cloud-hypervisor-sdk"
version = "0.1.0"
authors = ["Beny Zlotnik"]
license = "Apache 2.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
futures = "0.3.30"
http = "1.1.0"
http-body-util = "0.1.0"
hyper = { version = "1.2.0", features = ["client", "http2", "http1"] }
hyper-util = { version = "0.1.3" }
hyperlocal = "0.8.0"
pin-project-lite = "0.2.13"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.0", features = ["serde", "v4"] }
